log/build_2024-09-13_14-20-15/robotics_trial/stderr.log
  File "/root/project_root/install/robotics_trial/lib/python3.10/site-packages/robotics_trial/final_path.py", line 27
    self.path_publisher=self.create_publisher(String,/path,10)
                                                     ^
SyntaxError: invalid syntax

